fix(Locale): Ajusta partes não traduzidas
Acrescenta configurações de traduções e modifica traduções geradas
estaticamente.

Necessária gem especializada para gerar novas páginas estáticas já traduziadas.

--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -67,3 +67,14 @@ pt-BR:
       not_saved:
         one: "1 erro impediu que %{resource} fosse salvo(a):"
         other: "%{count} erros impediram que %{resource} fosse salvo(a):"
+  activerecord:
+    errors:
+      models:
+        produto:
+          attributes:
+            nome:
+              taken: "Campo deve ser único." 
+            qtd:
+              not_a_number: "Deve ser um número valido."
+            valor:
+              not_a_number: "Deve ser um número valido."
